[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemies/enemy_prototype/enemy.gd" type="Script" id=1]
[ext_resource path="res://enemies/enemy_prototype/attacks/EnemyAttacks.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/enemy_prototype/body_movement/state_machine/body_state_machine.gd" type="Script" id=3]
[ext_resource path="res://enemies/enemy_prototype/body_movement/states/motion/on_ground/idle.gd" type="Script" id=4]
[ext_resource path="res://enemies/enemy_prototype/body_movement/states/motion/on_ground/move.gd" type="Script" id=5]
[ext_resource path="res://enemies/enemy_prototype/body_movement/states/motion/in_air/fall.gd" type="Script" id=6]
[ext_resource path="res://enemies/enemy_prototype/body_movement/states/combat/stagger.gd" type="Script" id=7]
[ext_resource path="res://enemies/enemy_prototype/brain/state_machine/brain_state_machine.gd" type="Script" id=8]
[ext_resource path="res://enemies/enemy_prototype/brain/states/behaviors/patrol.gd" type="Script" id=9]
[ext_resource path="res://enemies/enemy_prototype/brain/states/behaviors/attack.gd" type="Script" id=10]
[ext_resource path="res://enemies/enemy_prototype/eyes/Eyes.tscn" type="PackedScene" id=11]
[ext_resource path="res://enemies/enemy_prototype/health/health.gd" type="Script" id=12]

[node name="Enemy" type="KinematicBody2D" groups=[
"Persist",
]]

input_pickable = false
collision_layer = 4
collision_mask = 19
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]
PUSH_FORCE = Vector2( 700, 0 )
strike_zone_damage = 2
strike_zone_stagger_time = 0.3
attack = null

[node name="Body" type="Sprite" parent="." index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="EnemyAttacks" parent="." index="3" instance=ExtResource( 2 )]

position = Vector2( 0, -13 )
scale = Vector2( 0.203354, 0.223433 )
_sections_unfolded = [ "Transform" ]

[node name="Visibility" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility" index="0"]

[node name="DetectWallRight" type="RayCast2D" parent="." index="5"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="DetectWallLeft" type="RayCast2D" parent="." index="6"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="DetectFloorRight" type="RayCast2D" parent="." index="7"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="DetectFloorLeft" type="RayCast2D" parent="." index="8"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="BodyMovement" type="Node" parent="." index="9"]

script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="BodyMovement" index="0"]

script = ExtResource( 4 )

[node name="Move" type="Node" parent="BodyMovement" index="1"]

script = ExtResource( 5 )

[node name="Fall" type="Node" parent="BodyMovement" index="2"]

script = ExtResource( 6 )

[node name="Stagger" type="Node" parent="BodyMovement" index="3"]

script = ExtResource( 7 )

[node name="Brain" type="Node" parent="." index="10"]

script = ExtResource( 8 )
initial_state = NodePath("Patrol")

[node name="Patrol" type="Node" parent="Brain" index="0"]

script = ExtResource( 9 )

[node name="Attack" type="Node" parent="Brain" index="1"]

script = ExtResource( 10 )
move = false

[node name="Eyes" parent="." index="11" instance=ExtResource( 11 )]

position = Vector2( 1.16227, -2.13083 )
detect_radius = 30
projectile_attack = true

[node name="Health" type="Node" parent="." index="12"]

script = ExtResource( 12 )
max_health = 10

[node name="DamageZone" type="Area2D" parent="." index="13"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone" index="0"]

[node name="CoolDown" type="Timer" parent="." index="14"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="Visibility" to="Eyes" method="_on_Visibility_body_entered"]

[connection signal="body_exited" from="Visibility" to="Eyes" method="_on_Visibility_body_exited"]

[connection signal="body_entered" from="DamageZone" to="." method="_on_DamageZone_body_entered"]

[connection signal="timeout" from="CoolDown" to="." method="_on_CoolDown_timeout"]


